@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-12T00:57:34Z",
-  "count_outdated" : 923,
-  "uniques_outdated" : 530,
-  "count" : 934,
-  "uniques" : 541,
+  "timestamp" : "2025-05-13T00:55:27Z",
+  "count_outdated" : 924,
+  "uniques_outdated" : 531,
+  "count" : 935,
+  "uniques" : 542,
   "clones" : [
-    {
-      "timestamp": "2025-04-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-29T00:00:00Z",
       "count": 1,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-05-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
