@@ -3,11 +3,6 @@
   "uniques": 1,
   "clones": [
     {
-      "timestamp": "2025-04-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-04-29T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -54,6 +49,11 @@
     },
     {
       "timestamp": "2025-05-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-05-12T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
