@@ -1,3 +1,12 @@
+2025-05-13T00:55:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14985745979 # 642
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-13
+* notice: last 14d: unq all: 1 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 530 923 / 541 934
+* notice: next accum: outdated-unq outdated-all / unq all: 531 924 / 542 935
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-04-28] / [2025-05-12]
+
 2025-05-12T00:57:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14961534408 # 641
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-12
